# mozi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/agent-memory/dev-plan-generator/: MEMORY.md
.claude/agents/: code-reviewer.md  dev-plan-generator.md  fullstack-developer.md  integration-e2e-tester.md  product-manager.md  product-review-agent.md  project-scheduler.md  ui-design-agent.md
.claude/rules/: ci-cd.md  coding-style.md  documentation.md  security.md  testing.md  workflow.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: AI_AGENT_MEMORY_CONTEXT_COMPARISON.md  architecture.md  resume.md
docs/foundation/architecture/: 2026-03-26_mozi_architecture.md  2026-03-26_mozi_detailed_design.md
docs/foundation/requirement/: 2026-03-26_mozi_overall_prd.md
docs/init/: 2026-03-29-mozi-architecture-design.md
docs/iteration/v1.0/: README.md
docs/superpowers/plans/: 2026-03-26-mozi-mvp-v1.0.md  2026-03-28-module-extraction-plan.md  2026-03-29-agent-loop-unification.md  2026-03-29-session-implementation.md
docs/superpowers/specs/: 2026-03-26-product-manager-agent-design.md  2026-03-28-module-extraction-design.md  2026-03-29-context-module-redesign.md  2026-03-29-memory-module-design.md  2026-03-29-mozi-architecture-design.md  2026-03-29-orchestrator-design.md  2026-03-29-session-design.md
docs/support/comparison/: AI_AGENT_PLANNING_TASK_COMPARISON.md  AI_AGENT_TOOLS_SECURITY_COMPARISON.md  AI_CODING_ASSISTANT_V2_ARCH.md  CLAUDE_CODE_COMPETITOR_ARCH.md
mozi/: __init__.py  __main__.py
mozi/capabilities/config/: __init__.py  loader.py
mozi/capabilities/tools/: __init__.py  framework.py  (+1 more)
mozi/cli/: __init__.py  commands.py  main.py  output.py
mozi/core/: __init__.py  error.py
mozi/orchestrator/: __init__.py  orchestrator.py
mozi/storage/: __init__.py  base.py
tests/: __init__.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py
(+119 files in other folders)
